--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body, html {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
-  background-color: #0a0a14; /* sketch.js 배경과 유사한 색상 */
+  height: 100%; 
+  background-color: #000000; /* 배경색을 검정색으로 변경 */
   color: #A8D5E2;
   font-family: sans-serif;
 }
